--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
